# memorialSite

./: .gitignore  Memorial Site List.md  README.md  compose.yaml
memorial-backend/: .gitignore  Cargo.toml  Dockerfile  bashcoms.txt  captioner.py  compose.yaml  imageTransfer.sh
memorial-backend/frontendBuild/: asset-manifest.json  index.html
memorial-backend/frontendBuild/static/css/: main.544eaf02.css  main.544eaf02.css.map
memorial-backend/frontendBuild/static/js/: main.43b215ab.js  main.43b215ab.js.map
memorial-backend/src/: dao.rs  lib.rs  mail.rs  main.rs  models.rs  schema.rs
memorial-frontend/: package-lock.json  package.json
memorial-frontend-rs/: LICENSE-MIT  README.md
memorial-frontend/public/: index.html
memorial-frontend/src/: App.css  App.js
nginx/: default.conf
